--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
     <li>HyperionDev (Jul 2021 - Feb 2022)
         <ul>
             <li class="a">Software Engineering Bootcamp</li>
+            <li class="a">BOOTCAMP SUCCESSFULLY COMPLETED</li>
         </ul>
     </li>
     <li>Intec College (April 2004)
